# toto

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
scripts/: mgos_disasm.py
src/toto/: SilkyEngineMES.py  toto.py  util.py
src/toto/filetypes/: AdvHdWs2.py  AgsdSpt.py  Anim.py  DxLib.py  KiriKiriScriptV2.py  Mgos.py  TranslatableFile.py
src/toto/tests/: test_extract_paths.py  test_ignore_line_regex.py  test_skip_identical.py  test_wrapping.py
src/toto/tests/filetypes/AGSD/: test_agsd_spt.py  test_nonfree_roundtrip.py
src/toto/tests/filetypes/AdvHdWs2/: test_advhd_ws2.py  test_nonfree_roundtrip.py
src/toto/tests/filetypes/Anim/: test_anim.py  test_nonfree_roundtrip.py
src/toto/tests/filetypes/DxLib/: test_nonfree_roundtrip.py  test_roundtrip.py
src/toto/tests/filetypes/KiriKiriScriptV2/: test_insertion.py  test_nonfree_roundtrip.py  test_roundtrip.py
src/toto/tests/filetypes/KiriKiriScriptV2/samples/: basic_grouping.ks  group_edges.ks  has_text.ks  leading_whitespace.ks  no_text.ks  realistic_japanese.ks  single_line_dialogue.ks  utf16_bom.ks  wrapping.ks
src/toto/tests/filetypes/KiriKiriScriptV2/samples/minimal/: minimal.ks  remaining.ks
src/toto/tests/filetypes/Mgos/: test_mgos.py  test_nonfree_roundtrip.py
