[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "toto"
dynamic = ["version"]
description = "Visual novel script localization tool"
requires-python = ">=3.10"
license = "MIT"
keywords = []
authors = [
  { name = "Kenkyuuka", email = "kenkyuuka@proton.me" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = ["Click", "chardet"]

[project.scripts]
toto = "toto.toto:cli"

[project.entry-points."toto.filetypes"]
dxlib = "toto.filetypes.DxLib:DxLib"
anim = "toto.filetypes.Anim:Anim"
kirikiri = "toto.filetypes.KiriKiriScriptV2:KiriKiriScript"
mgos = "toto.filetypes.Mgos:Mgos"
agsd = "toto.filetypes.AgsdSpt:AgsdSpt"
advhd = "toto.filetypes.AdvHdWs2:AdvHdWs2"

[tool.hatch.version]
path = "src/toto/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
  "pytest-cov",
  "pytest-xdist[psutil]",
]

[tool.hatch.envs.default.scripts]
test = "pytest src/toto/tests -n auto --maxprocesses 8 {args}"
test-nonfree = "pytest src/toto/tests -n auto --maxprocesses 8 -m nonfree {args}"
cov = "pytest src/toto/tests -n auto --maxprocesses 8 --cov --cov-report=term-missing {args}"

[tool.hatch.envs.hatch-test]

[[tool.hatch.envs.all.matrix]]
python = ["3.10", "3.11", "3.12"]

[tool.hatch.envs.lint]
dependencies = [
  "black>=23.1.0",
  "mypy>=1.0.0",
  "pytest",
  "ruff>=0.0.243",
]
[tool.hatch.envs.lint.scripts]
typing = "mypy --install-types --non-interactive {args:src/toto}"
style = [
  "ruff check {args:.}",
  "black --check --diff {args:.}",
]
fmt = [
  "black {args:.}",
  "ruff check --fix {args:.}",
  "style",
]
all = [
  "style",
  "typing",
]

[tool.black]
target-version = ["py310"]
line-length = 120
skip-string-normalization = true

[tool.ruff]
target-version = "py310"
line-length = 120
extend-exclude = ["scripts"]
[tool.ruff.lint]
select = [
  "A",
  "ARG",
  "B",
  "C",
  "DTZ",
  "E",
  "EM",
  "F",
  "FBT",
  "I",
  "ICN",
  "ISC",
  "N",
  "PLC",
  "PLE",
  "PLR",
  "PLW",
  "Q",
  "RUF",
  "S",
  "T",
  "TID",
  "UP",
  "W",
  "YTT",
]
ignore = [
  # Allow boolean positional values in function calls, like `dict.get(... True)`
  "FBT002", "FBT003",
  # Ignore checks for possible passwords
  "S105", "S106", "S107",
  # shelve/pickle used intentionally by the CLI
  "S301",
  # Ignore complexity
  "C901", "PLR0911", "PLR0912", "PLR0913", "PLR0915",
  # Magic values are standard in binary format parsing (0xFF, 0x81, etc.)
  "PLR2004",
  # Quote style managed by black (skip-string-normalization = true)
  "Q000",
  # Allow string/f-string literals in exceptions (all three forms)
  "EM101", "EM102", "EM103",
  # Allow implicit string concatenation on one line
  "ISC001",
  # Allow print() in CLI and diagnostic code
  "T201",
  # Allow conditional/lazy imports not at top level
  "PLC0415",
  # Fullwidth Japanese characters are intentional (VN localization tool)
  "RUF001", "RUF002", "RUF003",
  # CamelCase module names are the project convention
  "N999",
  # Unused args from interface conformance (width, wrap in handlers)
  "ARG003", "ARG004",
  # Unnecessary dict/list constructor calls — style preference
  "C408",
]
unfixable = [
  # Don't touch unused imports
  "F401",
]

[tool.ruff.lint.isort]
known-first-party = ["toto"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.per-file-ignores]
# Tests can use magic values, assertions, and relative imports
"**/tests/**/*" = ["ARG002", "F401", "RUF059", "S101", "TID252"]
"**/src/**/*" = ["A002", "ARG002", "RUF023", "S101", "TID252"]

[tool.mypy]
# Handler subclasses intentionally extend base class signatures with extra kwargs;
# the base class is for documentation, not polymorphic dispatch.
disable_error_code = ["override"]

[tool.pytest.ini_options]
markers = [
    "unit: pure logic tests with no filesystem or external dependencies",
    "integration: tests that read/write files or use the detection pipeline",
    "nonfree: tests that require real game data in nonfree/ directories",
]

[tool.coverage.run]
source_pkgs = ["toto"]
branch = true
parallel = true
omit = [
  "src/toto/__about__.py",
]

[tool.coverage.paths]
toto = ["src/toto", "*/toto/src/toto"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
